confik-macros/tests/trybuild/fail-try-from-not-implemented.stderr
error[E0277]: the trait bound `Foo: From<std::string::String>` is not satisfied
 --> tests/trybuild/fail-try-from-not-implemented.rs:5:17
  |
5 | #[derive(Debug, Configuration)]
  |                 ^^^^^^^^^^^^^ the trait `From<std::string::String>` is not implemented for `Foo`
  |
  = note: required for `std::string::String` to implement `Into<Foo>`
  = note: required for `Foo` to implement `TryFrom<std::string::String>`
  = note: required for `std::string::String` to implement `std::convert::TryInto<Foo>`
  = note: this error originates in the derive macro `Configuration` (in Nightly builds, run with -Z macro-backtrace for more info)
